--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.1.0",
     "fastify": "^4.23.2",
     "knex": "^2.5.1",
     "sqlite3": "^5.1.6",
